# Galganiza

./: .gitignore  CMakeLists.txt  HOWTO.md  Makefile  README.md  compile_commands.json  executar_pipeline.sh
exemplos/: fonte_identificadores.txt  fonte_inicios.txt  fonte_linguagem.txt  identificadores.er  inicios.er  linguagem.er  pipeline.er
exemplos_sintatico/: regras1.txt  tokens1.txt
exemplos_sintatico/01/: regras1.txt
exemplos_sintatico/02/: palavras1.txt  regras1.txt  tokens1.txt
exemplos_sintatico/03/: tokens1.txt
include/: lexer_generator.hpp  regex.hpp
include/automatos/: afd.hpp  afnd.hpp  algoritmos.hpp  common.hpp
include/gal/: automaton.hpp
include/lexico/: gerador_lexico.hpp
include/parser/: grammar.hpp  parser.hpp  tabelaSimbolos.hpp
include/regex/: compilador_regex.hpp  parser.hpp  regex.hpp
include/sintatico/: grammar.hpp  parser.hpp  tabelaSimbolos.hpp
src/: automaton.cpp  execute_parser.cpp  lexer_generator.cpp  main.cpp  main_sintatico.cpp  regex.cpp
src/automatos/: afd.cpp  afnd.cpp  algoritmos.cpp
src/lexico/: gerador_lexico.cpp
src/parser/: grammar.cpp  parser.cpp  tabelaSimbolos.cpp
src/regex/: compilador_regex.cpp  parser.cpp
src/sintatico/: grammar.cpp  parser.cpp  tabelaSimbolos.cpp
testes/: testes.cpp
tests/: tests.cpp
